@@ -19,7 +19,6 @@ import fr.madu59.fwa.anims.LeverAnimation;
 import fr.madu59.fwa.anims.RepeaterAnimation;
 import fr.madu59.fwa.anims.TrapDoorAnimation;
 import fr.madu59.fwa.anims.TripWireHookAnimation;
-import fr.madu59.fwa.anims.VaultAnimation;
 import fr.madu59.fwa.config.SettingsManager;
 import fr.madu59.fwa.config.configscreen.FancyWorldAnimationsConfigScreen;
 import fr.madu59.fwa.rendering.AnimationRenderingContext;
@@ -47,8 +46,6 @@ import net.minecraft.world.level.block.LeverBlock;
 import net.minecraft.world.level.block.RepeaterBlock;
 import net.minecraft.world.level.block.TrapDoorBlock;
 import net.minecraft.world.level.block.TripWireHookBlock;
-import net.minecraft.world.level.block.VaultBlock;
-import net.minecraft.world.level.block.entity.vault.VaultState;
 import net.minecraft.world.level.block.state.BlockState;
 
 public class FancyWorldAnimationsClient implements ClientModInitializer {
@@ -108,7 +105,7 @@ public class FancyWorldAnimationsClient implements ClientModInitializer {
 	}
 
 	public static double getPartialTick() {
-		return (double)client.level.getGameTime() + (double) Math.clamp(client.getTimer().getGameTimeDeltaPartialTick(true), 0.0f, 1.0f);
+		return (double)client.level.getGameTime() + (double) Math.min(Math.max(client.getFrameTime(), 0f), 1.0f);
 	}
 
 	public static void render(AnimationRenderingContext context)
@@ -165,7 +162,6 @@ public class FancyWorldAnimationsClient implements ClientModInitializer {
 		if(block instanceof BellBlock) return true;
 		if(block instanceof CampfireBlock) return state.getValue(CampfireBlock.LIT);
 		if(block instanceof TripWireHookBlock) return state.getValue(TripWireHookBlock.ATTACHED);
-		if(block instanceof VaultBlock) return state.getValue(VaultBlock.STATE) == VaultState.UNLOCKING;
 		return false;
 	}
 
@@ -184,7 +180,6 @@ public class FancyWorldAnimationsClient implements ClientModInitializer {
 			case REPEATER -> state.setValue(RepeaterBlock.DELAY, 1);
 			case CAMPFIRE -> state.setValue(CampfireBlock.LIT, false);
 			case TRIPWIRE_HOOK -> state.setValue(TripWireHookBlock.ATTACHED, false);
-			case VAULT -> state.setValue(VaultBlock.STATE, VaultState.UNLOCKING);
 			default -> state;
 		};
 	}
@@ -208,7 +203,6 @@ public class FancyWorldAnimationsClient implements ClientModInitializer {
 			case CAMPFIRE: return new CampfireAnimation(pos, defaultState, startTick, oldIsOpen, newIsOpen, oldState, newState);
 			case COMPOSTER: return new ComposterAnimation(pos, defaultState, startTick, oldIsOpen, newIsOpen, newState, oldState);
 			case TRIPWIRE_HOOK: return new TripWireHookAnimation(pos, defaultState, startTick, oldIsOpen, newIsOpen);
-			case VAULT: return new VaultAnimation(pos, defaultState, startTick, oldIsOpen, newIsOpen, newState, oldState);
 			case LANTERN: return new LanternAnimation(pos, defaultState, startTick, oldIsOpen, newIsOpen, newState, oldState);
 			default: return new Animation(pos, defaultState, startTick, oldIsOpen, newIsOpen);
 		}
@@ -231,7 +225,6 @@ public class FancyWorldAnimationsClient implements ClientModInitializer {
 		if(block instanceof CampfireBlock) return Type.CAMPFIRE;
 		if(block instanceof ComposterBlock) return Type.COMPOSTER;
 		//if(block instanceof TripWireHookBlock) return Type.TRIPWIRE_HOOK;
-		if(block instanceof VaultBlock) return Type.VAULT;
 		if(block instanceof LanternBlock) return Type.LANTERN;
 		return Type.USELESS;
 	}
@@ -295,7 +288,6 @@ public class FancyWorldAnimationsClient implements ClientModInitializer {
 		CAMPFIRE,
 		COMPOSTER,
 		TRIPWIRE_HOOK,
-		VAULT,
 		LANTERN,
 		USELESS
 	}
